edited that horrible trade icons to something fairly lenient to the eyes. temp fix.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1131,12 +1131,14 @@ You do not have the {need} bux needed.
 			</div>
 		</div>
 
-<center>
-<a href="#" onclick="return tradeshowtab('houses');"><img src="/art/trade_househoe.png"/></a>
-<a href="#" onclick="return tradeshowtab('hoes');"><img src="/art/trade_hoebro.png"/></a>
-<a href="#" onclick="return tradeshowtab('bros');"><img src="/art/trade_brobux.png"/></a>
-<a href="#" onclick="return tradeshowtab('all');"><img src="/art/trade_showall.png"/></a>
-</center>
+<div class="trade" style="margin-bottom:20px;">
+	<div class="trade1">
+<a href="#" onclick="return tradeshowtab('houses');"><span style="-moz-border-radius: 8px;-webkit-border-radius: 8px;border-radius: 8px 8px;width:150px;height:50px;background-color:#353535;padding:10px 20px 10px 20px;font-size:16px;color:#ccc;">Trade <img src="/art/houses.png"/> &amp; <img src="/art/hoes.png"/></span></a>
+<a href="#" onclick="return tradeshowtab('hoes');"><span style="-moz-border-radius: 8px;-webkit-border-radius: 8px;border-radius: 8px 8px;width:150px;height:50px;background-color:#353535;padding:10px 20px 10px 20px;font-size:16px;color:#ccc;">Trade <img src="/art/hoes.png"/> &amp; <img src="/art/bros.png"/></span></a>
+<a href="#" onclick="return tradeshowtab('bros');"><span style="-moz-border-radius: 8px;-webkit-border-radius: 8px;border-radius: 8px 8px;width:150px;height:50px;background-color:#353535;padding:10px 20px 10px 20px;font-size:16px;color:#ccc;">Trade <img src="/art/bros.png"/> &amp; <img src="/art/bux.png"/></span></a>
+<a href="#" onclick="return tradeshowtab('all');"><span style="-moz-border-radius: 8px;-webkit-border-radius: 8px;border-radius: 8px 8px;width:150px;height:50px;background-color:#353535;padding:10px 20px 10px 20px;font-size:16px;color:#ccc;">Show All</span></a>
+	</div>
+</div>
 
 <script type="text/javascript" >
 function tradeshowtab(n)
