added atom feed

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1,16 +1,17 @@
 #header
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
  <head>
 
 <title>{title}</title>
 
-<link REL="SHORTCUT ICON" HREF="/favicon.ico">
+<link rel="alternate" type="application/atom+xml" title="hoe house blog ATOM blog Feed" href="http://hoe-house.appspot.com/blog/.atom" />
+
+<link rel="shortcut icon" href="/favicon.ico" />
 
 <link rel="stylesheet" type="text/css" href="/css/jquery/smoothness/jquery-ui-1.8.2.custom.css" />
 <link rel="stylesheet" type="text/css" href="/css/hoe.css" /> 
-
 
 
 <script type="text/javascript" src="{jquery_js}"></script>
