added new fight icon.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -998,7 +998,7 @@ You do not have the {need} bux needed.
 				<div class="pro1a">
 					
 					<div class="prorob">
-						<a href="{H.url_base}fight/{player.id}">Rob <img src="/art/buxb.png" /> bux from {player.name}</a>
+						<a href="{H.url_base}fight/{player.id}"><img src="/art/profight.png" /></a>
 					</div>
 
 #player_profile
