--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -6,7 +6,7 @@
 
 <title>{title}</title>
 
-<link rel="alternate" type="application/atom+xml" title="hoe house blog ATOM blog Feed" href="http://hoe-house.appspot.com/blog/.atom" />
+<link rel="alternate" type="application/atom+xml" title="The hoe house blog ATOM blog Feed" href="http://hoe-house.appspot.com/blog/.atom" />
 
 <link rel="shortcut icon" href="/favicon.ico" />
 
@@ -1131,7 +1131,6 @@ You do not have the {need} bux needed.
 			Only the best offer in each catagory is available to buy so you should consider selling for less than that price if you want a quick sell.<br />
 			Remember that your trade offer will sit in the queue for a random amount of time, possibly a couple of hours before it shows up for anyone to buy.<br />
 			You might want to keep checking this page in case someone is offering a good deal.
-			It costs you 1 energy to make a purchase so choose wisely.
 			</div>
 			</div>
 		</div>
@@ -1532,13 +1531,11 @@ Upon leaving, they <img src="/art/shoutb.png" /> shouted : "<span style="color:#
 
 #act_robfail_text
 {name1} failed to steal any bux from {name2}.
-They were last seen shouting : "{shout}"
 {name1} lost {bros1} bros and {sticks1} sticks during the attempt.
 {name2} lost {sticks2} sticks defending themselves.
 
 #act_robfail_html
 <a href="{url}profile/{actor1}">{name1}</a> failed to steal any <img src="/art/buxb.png" /> bux from <a href="{url}profile/{actor2}">{name2}</a>. <br/>
-They were last seen <img src="/art/shoutb.png" /> shouting : "<span style="color:#ff5555"><b>{shout}</b></span>" <br/>
 <a href="{url}profile/{actor1}">{name1}</a> lost {bros1} <img src="/art/bros.png" /> bros and {sticks1} <img src="/art/sticksb.png" /> sticks during the attempt.<br/>
 <a href="{url}profile/{actor2}">{name2}</a> lost {sticks2} <img src="/art/sticksb.png" /> sticks defending themselves.<br/>
 
@@ -1547,25 +1544,23 @@ They were last seen <img src="/art/shoutb.png" /> shouting : "<span style="color
 #act_arsonwin_text
 {name1} burned down {houses2} of {name2} houses:
 Upon leaving, they shouted : "{shout}"
-{name1} lost {bros1} bros and {sticks1} sticks during the robbery.
+{name1} lost {bros1} bros and {sticks1} sticks during the arsoning.
 {name2} lost {bros2} bros and {sticks2} sticks defending themselves.
 
 #act_arsonwin_html
 <a href="{url}profile/{actor1}">{name1}</a> burned down {houses2} of <a href="{url}profile/{actor2}">{name2}</a>  <img src="/art/houses.png" /> houses. <br/>
 Upon leaving, they <img src="/art/shoutb.png" /> shouted : "<span style="color:#00d400"><b>{shout}</b></span>" <br/>
-<a href="{url}profile/{actor1}">{name1}</a> lost {bros1} <img src="/art/bros.png" /> bros and {sticks1} <img src="/art/sticksb.png" /> sticks during the robbery.<br/>
+<a href="{url}profile/{actor1}">{name1}</a> lost {bros1} <img src="/art/bros.png" /> bros and {sticks1} <img src="/art/sticksb.png" /> sticks during the arsoning.<br/>
 <a href="{url}profile/{actor2}">{name2}</a> lost {bros2} <img src="/art/bros.png" /> bros and {sticks2} <img src="/art/sticksb.png" /> sticks defending themselves.<br/>
 
 
 #act_arsonfail_text
 {name1} failed to burndown any of {name2} houses.
-They were last seen shouting : "{shout}"
 {name1} lost {bros1} bros and {sticks1} sticks during the attempt.
 {name2} lost {sticks2} sticks defending themselves.
 
 #act_arsonfail_html
 <a href="{url}profile/{actor1}">{name1}</a> failed to burndown any of <a href="{url}profile/{actor2}">{name2}</a> <img src="/art/houses.png" /> houses. <br/>
-They were last seen <img src="/art/shoutb.png" /> shouting : "<span style="color:#ff5555"><b>{shout}</b></span>" <br/>
 <a href="{url}profile/{actor1}">{name1}</a> lost {bros1} <img src="/art/bros.png" /> bros and {sticks1} <img src="/art/sticksb.png" /> sticks during the attempt.<br/>
 <a href="{url}profile/{actor2}">{name2}</a> lost {sticks2} <img src="/art/sticksb.png" /> sticks defending themselves.<br/>
 
