--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1129,7 +1129,7 @@ You do not have the {need} bux needed.
 			<div class="trade1">
 			<div class="trade4">
 			Only the best offer in each catagory is available to buy so you should consider selling for less than that price if you want a quick sell.<br />
-			Remember that your trade offer will sit in the queue for a random amount of time, possibly a couple of hours before it shows up for anyone to buy.<br />
+			Remember that your trade offer will sit in the queue for a random amount of time, possibly many hours before it shows up as available to buy.<br />
 			You might want to keep checking this page in case someone is offering a good deal.
 			</div>
 			</div>
