request for bigger input boxes approved and implemented.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1198,10 +1198,10 @@ $(function(){ tradeshowtab("all"); });
 		<button type="submit" class="button">Sell!</button>
 		<input type="hidden" name="cmd" value="sell" /> 
 		<input type="hidden" name="trade" value="{trade.offer}4{trade.seek}" /> 
-		<input type="text" name="count" value="0" size="3" class="field" id="trade_{trade.offer}4{trade.seek}_count" /> <img src="/art/{trade.offer}.png" /> {trade.offer}
+		<input type="text" name="count" value="0" size="9" class="field" id="trade_{trade.offer}4{trade.seek}_count" /> <img src="/art/{trade.offer}.png" /> {trade.offer}
 		
 		for <span id="trade_{trade.offer}4{trade.seek}_price">0</span> <img src="/art/{trade.seek}.png" /> {trade.seek} 
-		( <input type="text" name="cost" value="{cost.min}" size="3" id="trade_{trade.offer}4{trade.seek}_cost" /> <img src="/art/{trade.b}.png" /> {trade.b} each )
+		( <input type="text" name="cost" value="{cost.min}" size="3" id="trade_{trade.offer}4{trade.seek}_cost" /> <img src="/art/{trade.b}.png" /> each )
 		
 		</form>
 		<div class="clear"></div>
