limit active trades to 10 at a time

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1354,6 +1354,18 @@ $("#trade_{trade.offer}4{trade.seek}").validate({
 	</div>
 </div>
 
+#trade_sell_fail_queue
+
+<div class="cont">
+	<div class="chunk6d">
+		<div class="alert">
+			<img src="/art/fail.png" /> You have too many active offers and must wait for one to be bought before you may add another.
+		</div>
+
+	<div class="clear"></div>
+	</div>
+</div>
+
 #trade_buy
 
 <div class="cont">
