party font change.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -871,7 +871,7 @@ $("#hoe_player_shop_form").validate({
 		}
 		if(total>0)
 		{
-			s="Buy now for a grand total of only "+comma3(total)+" bux!";
+			s="Excellent choice, my lord. Buy now for a grand total of only "+comma3(total)+" bux!";
 		}
 		else
 		{
@@ -1593,7 +1593,7 @@ Upon leaving, they <img src="/art/shoutb.png" /> shouted : "<span style="color:#
 {name2} lost {sticks2} sticks defending themselves.
 
 #act_arsonfail_html
-<a href="{url}profile/{actor1}">{name1}</a> failed to burndown any of <a href="{url}profile/{actor2}">{name2}</a> <img src="/art/houses.png" /> houses. <br/>
+<a href="{url}profile/{actor1}">{name1}</a> failed to burn down any of <a href="{url}profile/{actor2}">{name2}</a> <img src="/art/houses.png" /> houses. <br/>
 <a href="{url}profile/{actor1}">{name1}</a> lost {bros1} <img src="/art/bros.png" /> bros and {sticks1} <img src="/art/sticksb.png" /> sticks during the attempt.<br/>
 <a href="{url}profile/{actor2}">{name2}</a> lost {sticks2} <img src="/art/sticksb.png" /> sticks defending themselves.<br/>
 
@@ -1608,7 +1608,7 @@ During the epic party they chanted : "{shout}"
 
 #act_partywin_html
 <a href="{url}profile/{actor1}">{name1}</a> partied so hard that {hoes} of <a href="{url}profile/{actor2}">{name2}</a> <img src="/art/hoes.png" /> hoes never came back.<br/>
-During the epic party they chanted : "{shout}"<br/>
+During the epic party they <img src="/art/shoutb.png" /> chanted : "<span style="color:#00d400"><b>{shout}</b></span>"<br/>
 <a href="{url}profile/{actor1}">{name1}</a> used up {manure1} <img src="/art/manure.png" /> manure partying.<br/>
 <a href="{url}profile/{actor2}">{name2}</a> used up {manure2} <img src="/art/manure.png" /> manure partying.<br/>
 
