--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -871,7 +871,7 @@ $("#hoe_player_shop_form").validate({
 		}
 		if(total>0)
 		{
-			s="Excellent choice, my lord. Buy now for a grand total of only "+comma3(total)+" bux!";
+			s="Excellent choice, my lord. <br /> Buy now for a grand total of only "+comma3(total)+" bux!";
 		}
 		else
 		{
