--- a/jslua/html/index.html
+++ b/jslua/html/index.html
@@ -2,15 +2,19 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello</title>
-    <script type="text/javascript" language="javascript" src="hello/hello.nocache.js"></script>
+    <title>JsLua</title>
+    <script type="text/javascript" language="javascript" src="JsLua/JsLua.nocache.js"></script>
   </head>
   <body bgcolor="white"> 
+
     <noscript>
       <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color:white; border: 1px solid red; padding: 4px; font-family: sans-serif">
         Your web browser must have JavaScript enabled
         in order for this application to display correctly.
       </div>
     </noscript>
+    
+okokok
+    
   </body>
 </html>
