gwt update, doesnt help

--- a/gwt/about.html
+++ b/gwt/about.html
@@ -1,7 +1,7 @@
 <html>
 
    <head>
-      <title>Google Web Toolkit 2.0.4</title>
+      <title>Google Web Toolkit 2.1.0</title>
       <style>
          body {
             background-color: white;
@@ -43,7 +43,7 @@
             <td id="title"><a href="http://code.google.com/webtoolkit/">Google Web Toolkit</a></td>
          </tr>
          <tr>
-            <td id="version">Version 2.0.4 <br> (Subversion releases/2.0@8340)</td>
+            <td id="version">Version 2.1.0 <br> (Subversion tags/2.1.0@9154)</td>
          </tr>
       </table>
 
