--- a/leeds-hack/html/console.html
+++ b/leeds-hack/html/console.html
@@ -21,6 +21,7 @@
     
 <div>
 <h1>This console is a local Lua state running in your browser as GWT javascript.</h1>
+Produced by <a href="http://leeds-hack.appspot.com/about/about.html">teampriv8</a>, at <a href="http://www.leedshack.com/">leedsHack 2010</a>. We would like to thank the <a href="http://leedshack.com/sponsors/">sponsors</a> for the venue and constant feeding.
 </div>
 
 <form class="jNice" name="console_form" id="console_form" action="#" onsubmit="return console_form_submit();">
