--- a/jslua/html/yarn.html
+++ b/jslua/html/yarn.html
@@ -27,7 +27,7 @@
 	height:480px;
 	margin:auto;
 	background:#000;
-	color:#0f0;
+	color:#8f8;
 
 }
 
@@ -49,7 +49,7 @@
 <pre class='prehack'>
 
 Please remain calm,
-	your game is loading...
+	yarn is loading...
 
 </pre>
 </div>
