operation yarn is go

--- a/jslua/html/yarn.html
+++ b/jslua/html/yarn.html
@@ -11,17 +11,17 @@
 
 <style>
 @font-face {
-    font-family: mono16x16;
-    src: url(cootuecursessquare16x16.otf);
+    font-family: xixhack;
+    src: url(xixhack.otf);
 }
 
 .prehack{
-	font-family:mono16x16;
+	font-family:xixhack;
 }    
 
 #displayhack{
 
-	font-family:mono16x16;
+	font-family:xixhack;
 		
 	width:640px;
 	height:480px;
