--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -10,6 +10,7 @@
 
 <link rel="shortcut icon" href="/favicon.ico" />
 
+<link rel="stylesheet" type="text/css" href="/css/base/aelua.css" /> 
 <link rel="stylesheet" type="text/css" href="/css/jquery/smoothness/jquery-ui-1.8.2.custom.css" />
 <link rel="stylesheet" type="text/css" href="/css/hoe.css" /> 
 
