added autoembedlinks as a jquery plugin

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -20,6 +20,10 @@
 <script type="text/javascript" src="{jquery_validate_js}"></script>
 <script type="text/javascript" src="{swfobject_js}"></script>
 <script type="text/javascript" src="/js/hoe.js"></script>
+
+<script type="text/javascript" src="/js/base/jquery-wet.js"></script>
+
+
 {extra}
 
  </head>
