--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1662,10 +1662,11 @@ function show_hoe_alert_countdown(nam,t)
 }
 
 </script>
-
-<div class="hoe_alert_list">
+<div class="chunk6">
+<div class="alert">
 
 #alert_foot_html
+</div>
 </div>
 
 #alert_speedround_soon_html
