--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1662,11 +1662,9 @@ function show_hoe_alert_countdown(nam,t)
 }
 
 </script>
-<div class="chunk6">
-<div class="alert">
+<div class="hoe_alert_list">
 
 #alert_foot_html
-</div>
 </div>
 
 #alert_speedround_soon_html
