weeooooo i mean, RAWWGHGHER

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -144,6 +144,14 @@
 </div>
 </div>
 </div>
+<div class="menu">
+<div class="menu1">
+<div class="menuit"><a href="{H.url_base}list">BOOKI</a></div>
+<div class="menuline"></div>
+<div class="menup"><a href="{H.url_base}list"><img src="/art/bookia.png" width="100" height="100" /></a></div>
+<div class="menun">Go see Wooki, the Booki.</div>
+</div>
+</div>
 <div class="clear"></div>
 
 #user_bar
@@ -200,6 +208,11 @@
 		<div class="act">
 			<div class="actp">
 				<a href="{H.url_base}trade"><img src="/art/trade.png" width="30" height="30" /></a>
+			</div>
+		</div>
+		<div class="act">
+			<div class="actp">
+				<a href="{H.url_base}booki"><img src="/art/booki.png" width="30" height="30" /></a>
 			</div>
 		</div>
 		<div class="clear"></div>
@@ -557,8 +570,8 @@
 <div class="cont">
 	<div class="chunk3a">
 		<div class="chunk3ait">
-			<img src="/art/shop.png" width="30" height="30" /> Shop
-		<!--<div class="chunk3line"></div>-->
+			<img src="/art/shop.png" width="30" height="30" /> NotAShop
+		<!--THIS IS A FAKE DEBUG SHOP. IGNORE. -->
 		</div>
 		<div class="clear"></div>
 	</div>
