--- a/dum-id/html/splash.html
+++ b/dum-id/html/splash.html
@@ -173,7 +173,7 @@
 					dumid is a distributed identity system used as an alternative for password authentication.
 				</div>
 				<div class="links">
-					sites currently using dumid include <a href="http://hoe-house.appspot.com" target="_new">hoehouse</a> &amp; <a href="http://notshi.appspot.com" target="_new">esyou</a>.
+					sites currently using dumid include <a href="http://hoe-house.appspot.com" target="_new">hoehouse</a>, <a href="http://notshi.appspot.com" target="_new">esyou</a> &amp; <a href="http://gen-information.appspot.com" target="_new">geninformation</a>.
 				</div>
 			</div>
 
