added the bar into the header (or footer) which means more broken stuff :)

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -40,6 +40,7 @@
 	</div>
 	<div class="line"></div>
 </div>
+{bar}
 
 #footer
 
@@ -161,7 +162,7 @@
 				<div class="log1">
 					<div class="logn">{hello}</div>
 				</div>
-					{action}
+					<div class="log3"><div class="logit">{action}</div></div>
 			</div>
 		</div>
 	</div>
