--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1546,6 +1546,16 @@ $("#trade_{trade.offer}4{trade.seek}").validate({
 <a href="{url}profile/{actor1}">{name1}</a> changed their <img src="/art/name.png" /> name to <a href="{url}profile/{actor1}">{name2}</a>
 
 
+#act_shout_text
+
+{name1} shouted : "{shout}"
+
+#act_shout_html
+
+<a href="{url}profile/{actor1}">{name1}</a> shouted : "<span style="color:#0000dd"><b>{shout}</b></span>"
+
+
+
 #act_tradeoffer_text
 
 {name1} offered {count} {offer} for {price} {seek}
