--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1499,6 +1499,22 @@ $("#trade_{trade.offer}4{trade.seek}").validate({
 </div>
 
 
+#acts_header
+<div class="cont">
+<a href="{url}">ALL</a>
+<a href="{url}/chat">CHAT</a>
+<a href="{url}/fight">FIGHT</a>
+<a href="{url}/trade">TRADE</a>
+</div>
+
+#acts_footer
+<div class="cont">
+<a href="{url}">TOP</a>
+<a href="{url}?off={prev_off}">PREV</a>
+<a href="{url}?off={next_off}">NEXT</a>
+</div>
+
+
 #profile_acts_header
 <div class="cont">
 	<div class="chunk3a">
