added work x20 to help with speed rounds

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -670,6 +670,9 @@
 		<div class="formin">
 		<input class="radio" type="radio" name="x" value="10"{check10}/>x10
 		</div>
+		<div class="formin">
+		<input class="radio" type="radio" name="x" value="20"{check20}/>x20
+		</div>
 		</div>
 
 		</form>
